--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,65 @@
 	padding: 0;
 	margin: 0;
 }
+
+body{
+	font-family: arial;
+}
+
+.nav{
+	height: 70px;
+}
+
+.logo-nav{
+	margin: auto;
+    margin-left: 30px;
+}
+
+.logo-nav img{
+	margin: auto;
+}
+
+.nav-item{
+	margin: auto;
+}
+
+.nav-logout{
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-right: 30px;
+}
+
+.login{
+	padding-top: 3rem !important;
+    width: 400px;
+    margin: auto;
+    margin-top: auto;
+}
+
+.logo{
+	width: 300px;
+    text-align: left;
+    margin: 30px;
+}
+
+.form{
+	width: 300px;
+	margin: 30px;
+}
+
+.btn-entrar{
+	width: 300px;
+	text-align: right;
+}
+
+.btn-primary-01{
+    color: #fff;
+    background-color: #221f7b;
+    border-color: #221f7b;
+}
+
+.btn-primary-01:hover{
+    color: #fff;
+    background-color: #030054;
+    border-color: #030054;
+}
